[gd_scene load_steps=2 format=3 uid="uid://1b2nyy1m1rhe"]

[ext_resource type="Script" path="res://scripts/DeckListView.gd" id="1_decklist"]

[node name="DeckListView" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
script = ExtResource("1_decklist")

[node name="HeaderBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Your Decks"
vertical_alignment = 1

[node name="CreateDeckButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "+ Create New Deck"

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Decks must have 20-40 cards to be playable."

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="DeckListContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 10
